--- a/Notes.tex
+++ b/Notes.tex
@@ -70,11 +70,18 @@ Probability density function $f$\\
 	\item Track evolution of "topology"
 \end{itemize}
 Similar stability theorem.\\
-Seems to have relation with Morse theory. "If $f$ is Morse, then..."
+Seems to have relation with Morse theory. "If $f$ is Morse, then..."\\
 
 \section{Topological Persistence}
 Persistence diagram shows the "persistence" of the topological features.
 Slight perturbation causes slight difference in persistence diagrams.
+
+\section{Homology}
+Definition: $h:X\mapsto Y$ is a homeomorphism if there exists a map $h^{-1}:Y\mapsto X$, s.t.
+\begin{itemize}
+	\item both are continuous
+	\item
+\end{itemize}
 
 
 \section{Mapper}
