--- a/NotesTopology.tex
+++ b/NotesTopology.tex
@@ -39,7 +39,7 @@ These are called open sets.\\
 \\
 \paragraph{Continuous:}the inverse image of every open set is an open set.
 
-\paragraph{Homotopy:}\\
+\paragraph{Homotopy:}
 Intuitively from the idea of continuous deformation; is strictly weaker than homeomorphism.
 
 \section{Homology}
@@ -47,7 +47,10 @@ Intuitive view:\\
 \paragraph{Path:} continuous map $[0,1]\mapsto X$; $x\sim y$ if $\gamma(0)=x,\gamma(1)=y$.\\
 This is clearly an equivalence relation. Therefore, the path connected components of $X$ are equivalence classes under $\sim$.
 \subsection{Simplicial Complexes}
-General idea is that simplicial complexes extend the notion of graph to include higher dimensional components in it.
-
+General idea is that simplicial complexes extend the notion of graph to include higher dimensional components in it.\\
+Turn simplicial complexes to topological spaces: "embed" it into Euclidean space.\\
+Embedding: map points to coordinates and all points affinely independent.\\
+Induced map: $\hat{f}:K\to 2^{\mathbb{R}^d},\{ v_0,v_1,...,v_r\}\mapsto Conv(f(v_0),...,f(v_r))$\\
+All embeddings $f:K\to\mathbb{R}^d,g:K\to\mathbb{R}^{d'}$, $\hat{f}$ and $\hat{g}$ are homeomorphic.
 
 \end{document}
