--- a/Notes.tex
+++ b/Notes.tex
@@ -83,6 +83,7 @@ Definition: $h:X\mapsto Y$ is a homeomorphism if there exists a map $h^{-1}:Y\ma
 	\item
 \end{itemize}
 
+\section{Computation of Persistence Homology}
 
 \section{Mapper}
 
