--- a/Notes.tex
+++ b/Notes.tex
@@ -42,6 +42,15 @@
 \end{enumerate}
 \subsubsection{Persistent Homology}
 \begin{enumerate}
+	\item How to compute a filtration from point cloud?
+	\begin{enumerate}
+		\item Various ways to define simplices, Cech, VR, etc
+		\item What if data not necessarily point cloud?
+		\begin{enumerate}
+			\item Image?
+			\item 3D objects?
+		\end{enumerate}
+	\end{enumerate}
 	\item Need to delve into the details of the PH algorithms
 	\begin{enumerate}
 		\item Like reading off the intervals.
@@ -90,6 +99,8 @@ Definition: $h:X\mapsto Y$ is a homeomorphism if there exists a map $h^{-1}:Y\ma
 	\item both are continuous
 	\item
 \end{itemize}
+
+
 
 \section{Computation of Persistence Homology}
 This part is largely cited from \cite{Otter2017}.\\
