--- a/Reference.bib
+++ b/Reference.bib
@@ -1,3 +1,17 @@
+@article{Bubenik2017,
+title = "A persistence landscapes toolbox for topological statistics",
+journal = "Journal of Symbolic Computation",
+volume = "78",
+pages = "91 - 114",
+year = "2017",
+note = "Algorithms and Software for Computational Topology",
+issn = "0747-7171",
+doi = "https://doi.org/10.1016/j.jsc.2016.03.009",
+url = "http://www.sciencedirect.com/science/article/pii/S0747717116300104",
+author = "Peter Bubenik and Paweł Dłotko",
+keywords = "Topological data analysis, Persistent homology, Statistical topology, Topological machine learning, Intrinsic dimension"
+}
+
 @Article{Otter2017,
 author="Otter, Nina
 and Porter, Mason A.
@@ -18,3 +32,197 @@ doi="10.1140/epjds/s13688-017-0109-5",
 url="https://doi.org/10.1140/epjds/s13688-017-0109-5"
 }
 
+
+
+@article{Bubenik2015,
+ author = {Bubenik, Peter},
+ title = {Statistical Topological Data Analysis Using Persistence Landscapes},
+ journal = {J. Mach. Learn. Res.},
+ issue_date = {January 2015},
+ volume = {16},
+ number = {1},
+ month = jan,
+ year = {2015},
+ issn = {1532-4435},
+ pages = {77--102},
+ numpages = {26},
+ url = {http://dl.acm.org/citation.cfm?id=2789272.2789275},
+ acmid = {2789275},
+ publisher = {JMLR.org},
+ keywords = {persistence landscape, persistent homology, statistical topology, topological data analysis, topological summary},
+}
+
+
+
+@article{Fasy2014,
+  author    = {Brittany Terese Fasy and
+               Jisu Kim and
+               Fabrizio Lecci and
+               Cl{\'{e}}ment Maria},
+  title     = {Introduction to the {R} package {TDA}},
+  journal   = {CoRR},
+  volume    = {abs/1411.1830},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1411.1830},
+  archivePrefix = {arXiv},
+  eprint    = {1411.1830},
+  timestamp = {Wed, 07 Jun 2017 14:40:40 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/FasyKLM14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{Javaplex,
+     author = {Tausz, Andrew and Vejdemo-Johansson, Mikael and Adams, Henry},
+     title = {Java{P}lex: {A} research software package for persistent (co)homology},
+     booktitle = {Proceedings of ICMS 2014},
+     editor = {Hong, Han and Yap, Chee},
+     series = {Lecture Notes in Computer Science 8592}, 
+     year = {2014},
+     pages = {129-136},
+     note = {Software available at \url{http://appliedtopology.github.io/javaplex/}}
+}
+
+@ARTICLE{Adcock2013,
+   author = {{Adcock}, A. and {Carlsson}, E. and {Carlsson}, G.},
+    title = "{The Ring of Algebraic Functions on Persistence Bar Codes}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1304.0530},
+ primaryClass = "math.RA",
+ keywords = {Mathematics - Rings and Algebras, 13Pxx, 68T10},
+     year = 2013,
+    month = apr,
+   adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1304.0530A},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@Article{Mischaikow2013,
+author="Mischaikow, Konstantin
+and Nanda, Vidit",
+title="Morse Theory for Filtrations and Efficient Computation of Persistent Homology",
+journal="Discrete {\&} Computational Geometry",
+year="2013",
+month="Sep",
+day="01",
+volume="50",
+number="2",
+pages="330--353",
+abstract="We introduce an efficient preprocessing algorithm to reduce the number of cells in a filtered cell complex while preserving its persistent homology groups. The technique is based on an extension of combinatorial Morse theory from complexes to filtrations.",
+issn="1432-0444",
+doi="10.1007/s00454-013-9529-6",
+url="https://doi.org/10.1007/s00454-013-9529-6"
+}
+
+@Article{Barmak2012,
+author="Barmak, Jonathan Ariel
+and Minian, Elias Gabriel",
+title="Strong Homotopy Types, Nerves and Collapses",
+journal="Discrete {\&} Computational Geometry",
+year="2012",
+month="Mar",
+day="01",
+volume="47",
+number="2",
+pages="301--328",
+abstract="We introduce the theory of strong homotopy types of simplicial complexes. Similarly to classical simple homotopy theory, the strong homotopy types can be described by elementary moves. An elementary move in this setting is called a strong collapse and it is a particular kind of simplicial collapse. The advantage of using strong collapses is the existence and uniqueness of cores and their relationship with the nerves of the complexes. From this theory we derive new results for studying simplicial collapsibility with a different point of view. We analyze vertex-transitive simplicial G-actions and prove a particular case of the Evasiveness conjecture for simplicial complexes. Moreover, we reduce the general conjecture to the class of minimal complexes. We also strengthen a result of V. Welker on the barycentric subdivision of collapsible complexes. We obtain this and other results on collapsibility of polyhedra by means of the characterization of the different notions of collapses in terms of finite topological spaces.",
+issn="1432-0444",
+doi="10.1007/s00454-011-9357-5",
+url="https://doi.org/10.1007/s00454-011-9357-5"
+}
+
+@Inbook{Wagner2012,
+author="Wagner, Hubert
+and Chen, Chao
+and Vu{\c{c}}ini, Erald",
+editor="Peikert, Ronald
+and Hauser, Helwig
+and Carr, Hamish
+and Fuchs, Raphael",
+title="Efficient Computation of Persistent Homology for Cubical Data",
+bookTitle="Topological Methods in Data Analysis and Visualization II: Theory, Algorithms, and Applications",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="91--106",
+abstract="In this paper we present an efficient framework for computation of persistent homology of cubical data in arbitrary dimensions. An existing algorithm using simplicial complexes is adapted to the setting of cubical complexes. The proposed approach enables efficient application of persistent homology in domains where the data is naturally given in a cubical form. By avoiding triangulation of the data, we significantly reduce the size of the complex. We also present a data-structure designed to compactly store and quickly manipulate cubical complexes. By means of numerical experiments, we show high speed and memory efficiency of our approach. We compare our framework to other available implementations, showing its superiority. Finally, we report performance on selected 3D and 4D data-sets.",
+isbn="978-3-642-23175-9",
+doi="10.1007/978-3-642-23175-9_7",
+url="https://doi.org/10.1007/978-3-642-23175-9_7"
+}
+
+@article {Carlsson2009,
+    AUTHOR = {Carlsson, Gunnar},
+     TITLE = {Topology and data},
+   JOURNAL = {Bull. Amer. Math. Soc. (N.S.)},
+  FJOURNAL = {American Mathematical Society. Bulletin. New Series},
+    VOLUME = {46},
+      YEAR = {2009},
+    NUMBER = {2},
+     PAGES = {255--308},
+      ISSN = {0273-0979},
+   MRCLASS = {55-02 (62-02 62-07 94A12)},
+  MRNUMBER = {2476414},
+MRREVIEWER = {Peter Bubenik},
+       DOI = {10.1090/S0273-0979-09-01249-X},
+       URL = {https://doi.org/10.1090/S0273-0979-09-01249-X},
+}
+
+@article {Carlsson2008,
+    AUTHOR = {Carlsson, Gunnar and Ishkhanov, Tigran and de Silva, Vin and
+              Zomorodian, Afra},
+     TITLE = {On the local behavior of spaces of natural images},
+   JOURNAL = {Int. J. Comput. Vis.},
+  FJOURNAL = {International Journal of Computer Vision},
+    VOLUME = {76},
+      YEAR = {2008},
+    NUMBER = {1},
+     PAGES = {1--12},
+      ISSN = {0920-5691},
+   MRCLASS = {68U05 (55N35 57M50 94A08)},
+  MRNUMBER = {3715451},
+       DOI = {10.1007/s11263-007-0056-x},
+       URL = {https://doi.org/10.1007/s11263-007-0056-x},
+}
+
+@article{Bubenik2007,
+author = "Bubenik, Peter and Kim, Peter T.",
+fjournal = "Homology, Homotopy and Applications",
+journal = "Homology Homotopy Appl.",
+number = "2",
+pages = "337--362",
+publisher = "International Press of Boston",
+title = "A statistical approach to persistent homology",
+url = "https://projecteuclid.org:443/euclid.hha/1201127341",
+volume = "9",
+year = "2007"
+}
+
+@inproceedings {Singh2007,
+booktitle = {Eurographics Symposium on Point-Based Graphics},
+editor = {M. Botsch and R. Pajarola and B. Chen and M. Zwicker},
+title = {{Topological Methods for the Analysis of High Dimensional Data Sets and 3D Object Recognition}},
+author = {Singh, Gurjeet and Memoli, Facundo and Carlsson, Gunnar},
+year = {2007},
+publisher = {The Eurographics Association},
+ISSN = {1811-7813},
+ISBN = {978-3-905673-51-7},
+DOI = {10.2312/SPBG/SPBG07/091-100}
+}
+
+@book {Kaczynski2004,
+    AUTHOR = {Kaczynski, Tomasz and Mischaikow, Konstantin and Mrozek,
+              Marian},
+     TITLE = {Computational homology},
+    SERIES = {Applied Mathematical Sciences},
+    VOLUME = {157},
+ PUBLISHER = {Springer-Verlag, New York},
+      YEAR = {2004},
+     PAGES = {xviii+480},
+      ISBN = {0-387-40853-3},
+   MRCLASS = {55-02 (37B30 55M20 55M25 68U10 94A08)},
+  MRNUMBER = {2028588},
+MRREVIEWER = {Andrzej Kozlowski},
+       DOI = {10.1007/b97315},
+       URL = {https://doi.org/10.1007/b97315},
+}
