--- a/Notes.tex
+++ b/Notes.tex
@@ -264,6 +264,7 @@ Key point: define an appropriate distance function between diagrams. The main ob
 \paragraph{Wasserstein Distance} is a popular way to defined distance. Details skipped.
 \subsubsection{Third Approach}
 Key point: map the space of persistence diagrams to analyzable spaces (e.g. Banach spaces). Persistence landscape\cite{Bubenik2015}, using space of algebraic functions\cite{Adcock2013}, kernalized techniques.
+\paragraph{Persistence }
 
 \section{Mapper}
 
