--- a/Reference.bib
+++ b/Reference.bib
@@ -1,3 +1,17 @@
+@INPROCEEDINGS{Chittajallu2018, 
+author={D. R. Chittajallu and N. Siekierski and S. Lee and S. Gerber and J. Beezley and D. Manthey and D. Gutman and L. Cooper}, 
+booktitle={2018 IEEE 15th International Symposium on Biomedical Imaging (ISBI 2018)}, 
+title={Vectorized persistent homology representations for characterizing glandular architecture in histology images}, 
+year={2018}, 
+volume={}, 
+number={}, 
+pages={232-235}, 
+abstract={Characterizing glandular architecture in histology images of adenocarcinomas is a fundamental problem in digital pathology, with important implications for computer-assisted diagnosis and grading. In this paper, we present a new set of features for encoding the glandular epithelium architecture based on two recently developed vectorized persistent homology representations called persistence images and persistence landscapes and demonstrate their application to colorectal cancer diagnosis. On the MICCAI2015 Gland Segmentation Challenge Contest dataset with 165 images (85 training, 80 test images), we obtained a benign vs malignant classification accuracy of 85% and 83% using persistence image and persistence landscape based features, respectively.}, 
+keywords={biomedical optical imaging;cancer;feature extraction;image classification;image segmentation;medical image processing;MICCAI2015 Gland Segmentation Challenge Contest dataset;colorectal cancer diagnosis;computer-assisted diagnosis;digital pathology;glandular architecture;glandular epithelium architecture;histology images;persistence images;vectorized persistent homology representations;Cancer;Computer architecture;Face;Machine learning;Microprocessors;Training;Two dimensional displays;Cancer Grading;Computer aided diagnosis;Histopathology;Machine learning;Persistence images;Persistence landscapes;Persistent homology}, 
+doi={10.1109/ISBI.2018.8363562}, 
+ISSN={}, 
+month={April},}
+
 @article{Bubenik2017,
 title = "A persistence landscapes toolbox for topological statistics",
 journal = "Journal of Symbolic Computation",
@@ -32,7 +46,37 @@ doi="10.1140/epjds/s13688-017-0109-5",
 url="https://doi.org/10.1140/epjds/s13688-017-0109-5"
 }
 
+@InProceedings{Qaiser2017,
+author="Qaiser, Talha
+and Tsang, Yee-Wah
+and Epstein, David
+and Rajpoot, Nasir",
+editor="Vald{\'e}s Hern{\'a}ndez, Mar{\'i}a
+and Gonz{\'a}lez-Castro, V{\'i}ctor",
+title="Tumor Segmentation in Whole Slide Images Using Persistent Homology and Deep Convolutional Features",
+booktitle="Medical Image Understanding and Analysis",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="320--329",
+abstract="This paper presents a novel automated tumor segmentation approach for Hematoxylin {\&} Eosin stained histology images. The proposed method enhances the segmentation performance by combining the topological and convolution neural network (CNN) features. Our approach is based on 3 steps: (1) construct enhanced persistent homology profiles by using topological features; (2) train a CNN to extract convolutional features; (3) employ a multi-stage ensemble strategy to combine Random Forest regression models. The experimental results demonstrate that proposed method outperforms the conventional CNN.",
+isbn="978-3-319-60964-5"
+}
 
+@article{Bendich2016,
+author = "Bendich, Paul and Marron, J. S. and Miller, Ezra and Pieloch, Alex and Skwerer, Sean",
+doi = "10.1214/15-AOAS886",
+fjournal = "The Annals of Applied Statistics",
+journal = "Ann. Appl. Stat.",
+month = "03",
+number = "1",
+pages = "198--218",
+publisher = "The Institute of Mathematical Statistics",
+title = "Persistent homology analysis of brain artery trees",
+url = "https://doi.org/10.1214/15-AOAS886",
+volume = "10",
+year = "2016"
+}
 
 @article{Bubenik2015,
  author = {Bubenik, Peter},
@@ -149,6 +193,21 @@ abstract="In this paper we present an efficient framework for computation of per
 isbn="978-3-642-23175-9",
 doi="10.1007/978-3-642-23175-9_7",
 url="https://doi.org/10.1007/978-3-642-23175-9_7"
+}
+
+@book{Edelsbrunner2010,
+    abstract = {{This book is an introduction to computational topology for students in Computer Science and Mathematics.}},
+    author = {Edelsbrunner, Herbert and Harer, John},
+    citeulike-article-id = {12704612},
+    citeulike-linkout-0 = {http://dx.doi.org/10.1090/mbk/069},
+    doi = {10.1090/mbk/069},
+    isbn = {0-8218-4925-5},
+    posted-at = {2013-10-08 16:17:57},
+    priority = {2},
+    publisher = {American Mathematical Society},
+    title = {{Computational Topology: An Introduction}},
+    url = {http://dx.doi.org/10.1090/mbk/069},
+    year = {2010}
 }
 
 @article {Carlsson2009,
